[package]
name = "fluent_builder"
version = "0.1.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
license = "MIT"
description = "A simple builder API."
documentation = "https://docs.rs/fluent_builder/"
repository = "https://github.com/KodrAus/fluent_builder"
readme = "README.md"

[dependencies]
